# hugin-mcp-client

./: .gitignore  .gitmodules  CHANGELOG.md  DEMO_SCRIPT.md  MANIFEST.in  QUICK_START.md  README.md  SETUP.md  SUBMODULE_CONVERSION.md  config-openvino.toml  config.example.toml  export_model.py  install.sh  justfile  pyproject.toml  pytest.ini  run-local.sh  runit  setup-local.sh
.claude/: context.md
desktop/: hugin-notify  hugin-watch.path  hugin-watch.service  install-desktop.sh
docs/: CODE_EXECUTION_MODE.md  CONVERSATION_ARCHIVAL.md  IMPLEMENTATION_PLAN.md  MONITORING_DESIGN.md  MULTI_AGENT_ARCHITECTURE.md  NPU_STATUS.md  OPENVINO_NPU_SETUP.md  PROACTIVE_MONITORING_DESIGN.md  RELEASE_PROCESS.md
src/hugin_mcp_client/: __init__.py  builtin_tools.py  cli.py  llm_client.py  llm_provider.py  logging_config.py  mcp_client.py  ollama_provider.py  openai_provider.py  openvino_provider.py  orchestrator.py  tool_call_sanitizer.py  vllm_provider.py
src/hugin_mcp_client/agents/: __init__.py  personal_dashboard.py  project_discovery.py  provider.py
systemd/: hugin-dashboard.service  hugin-dashboard.timer
tests/: __init__.py  test_mcp_client.py
