[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hugin-mcp-client"
version = "1.1.0"
description = "MCP Client for interacting with LLMs and MCP servers - Hugin, Odin's raven of thought"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Sriram Ramkrishna", email = "sri@stoneandkey.consulting"}
]
keywords = ["mcp", "client", "llm", "anthropic", "hugin"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "mcp>=1.0.0,<2.0.0",
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0,<3.0.0",
    "anyio>=3.0.0,<5.0.0",
    "rich>=13.0.0",  # For nice CLI output
    "prompt_toolkit>=3.0.0",  # For better input handling with line wrapping
    "ddgs>=9.0.0",  # For web search (DuckDuckGo)
    "aiohttp>=3.9.0",  # For parallel HTTP requests (agent framework)
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
vllm = [
    "vllm>=0.5.0",
]

[project.scripts]
hugin = "hugin_mcp_client.cli:main"
hugin-discover = "hugin_mcp_client.agents.project_discovery:cli"
hugin-dashboard = "hugin_mcp_client.agents.personal_dashboard:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
target-version = "py39"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
